[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Sprites/dracula_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://src/Sprites/clipart_panic.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/BloodSplat.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://src/Scenes/Attack_Slash.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3, 15.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2.5, 15.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "block"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "suck_stand"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 4 )
maxSpeed = 35.0
accel = 400.0

[node name="Character" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Character"]
texture = ExtResource( 1 )
hframes = 3
vframes = 2

[node name="SuckAlert" type="Area2D" parent="Character"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/SuckAlert"]
position = Vector2( 5, 0.5 )
shape = SubResource( 8 )

[node name="BloodSplat" parent="Character" instance=ExtResource( 3 )]
position = Vector2( 1, -4 )
amount = 10

[node name="HurtArea" type="Area2D" parent="Character"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/HurtArea"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 9 )

[node name="Attack_Slash" parent="Character" instance=ExtResource( 5 )]
position = Vector2( 17, 0 )
scale = Vector2( 2.5, 2.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/block = SubResource( 4 )
anims/death = SubResource( 10 )
anims/default = SubResource( 5 )
anims/suck_stand = SubResource( 7 )

[node name="ClipartPanic" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Character/SuckAlert" to="." method="_on_SuckAlert_area_entered"]
[connection signal="area_exited" from="Character/SuckAlert" to="." method="_on_SuckAlert_area_exited"]
[connection signal="area_entered" from="Character/HurtArea" to="." method="_on_HurtArea_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
